--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,6 +27,11 @@ security:
             logout:
                 path: app_logout
                 target: app_login
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 2592000 # 30 jours en secondes
+                path: /
+                always_remember_me: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
